tweak progress bar width percentage to prevent overflow

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 	left: 0;
 	transform: translateY(-50%);
 	height: 4px;
-	width: 100%;
+	width: 95%;
 	z-index: -1;
 }
 
@@ -58,7 +58,7 @@ body {
 	transform: translateY(-50%);
 	height: 4px;
 	width: 0%;
-	max-width: 98%;
+	max-width: 95%;
 	z-index: -1;
 	transition: .4s ease;
 }
